fix websocket port wonkiness, add css overflow hidden on editor body

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html {
 }
 body {
   height: 100%;
+  overflow: hidden;
 }
 .CodeMirror {
   height: calc(100% - 50px);
